--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.JSON_Library.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
